Barra Superior PARTE 1

--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
 
 </head>
 <body>
-    <h1>Olá DSMovie</h1>
-    <h2>Promoções</h2>
+    <header>
+        <nav class="container">
+            <h1>DSMovie</h1>
+            <a href="https://github.com/Rafael-Melo">/Rafael Melo</a>
+        </nav>
+    </header>
 </body>
 </html>
