--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
     <header>
         <nav class="container">
             <h1>DSMovie</h1>
-            <a href="https://github.com/Rafael-Melo">/Rafael Melo</a>
+            <div>
+                <img src="img/github.svg" alt="Github">
+                <a href="https://github.com/Rafael-Melo">/Rafael Melo</a>
+            </div>
         </nav>
     </header>
 </body>
