Series dos Cards

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 
                 <div class="col-sm-6 col-lg-4 col-xl-3 bm-3">
                     <div class="dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/jBJWaqoSCiARWtfV0GlqHrcdidd.jpg" alt="The Witcher">
+                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/k47JEUTQsSMN532HRg6RCzZKBdB.jpg" alt="Vikings: Valhalla">
                         <div class="dsmovie-card-description">
-                            <h3>The Witcher</h3>
+                            <h3>Vikings Valhalla</h3>
                             <a class="dsmovie-btn" href="form.html">Avaliar</a>
                         </div>
                     </div>
@@ -49,9 +49,9 @@
 
                 <div class="col-sm-6 col-lg-4 col-xl-3 bm-3">
                     <div class="dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/jBJWaqoSCiARWtfV0GlqHrcdidd.jpg" alt="The Witcher">
+                        <img src="https://www.themoviedb.org/t/p/w220_and_h330_face/i0uajcHH9yogXMfDHpOXexIukG9.jpg" alt="Peaky Blinders">
                         <div class="dsmovie-card-description">
-                            <h3>The Witcher</h3>
+                            <h3>Peaky Blinders</h3>
                             <a class="dsmovie-btn" href="form.html">Avaliar</a>
                         </div>
                     </div>
@@ -59,9 +59,9 @@
 
                 <div class="col-sm-6 col-lg-4 col-xl-3 bm-3">
                     <div class="dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/jBJWaqoSCiARWtfV0GlqHrcdidd.jpg" alt="The Witcher">
+                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/sjx6zjQI2dLGtEL0HGWsnq6UyLU.jpg" alt="O Livro de Boba Fett">
                         <div class="dsmovie-card-description">
-                            <h3>The Witcher</h3>
+                            <h3>O Livro de Boba Fett</h3>
                             <a class="dsmovie-btn" href="form.html">Avaliar</a>
                         </div>
                     </div>
@@ -69,9 +69,9 @@
 
                 <div class="col-sm-6 col-lg-4 col-xl-3 bm-3">
                     <div class="dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/jBJWaqoSCiARWtfV0GlqHrcdidd.jpg" alt="The Witcher">
+                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/zHdQ6yaqDf3OQO5uhr0auAgwK6O.jpg" alt="Bel Air">
                         <div class="dsmovie-card-description">
-                            <h3>The Witcher</h3>
+                            <h3>Bel Air</h3>
                             <a class="dsmovie-btn" href="form.html">Avaliar</a>
                         </div>
                     </div>
@@ -79,9 +79,9 @@
 
                 <div class="col-sm-6 col-lg-4 col-xl-3 bm-3">
                     <div class="dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/jBJWaqoSCiARWtfV0GlqHrcdidd.jpg" alt="The Witcher">
+                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/lHe8iwM4Cdm6RSEiara4PN8ZcBd.jpg" alt="Vikings">
                         <div class="dsmovie-card-description">
-                            <h3>The Witcher</h3>
+                            <h3>Vikings</h3>
                             <a class="dsmovie-btn" href="form.html">Avaliar</a>
                         </div>
                     </div>
@@ -89,9 +89,9 @@
 
                 <div class="col-sm-6 col-lg-4 col-xl-3 bm-3">
                     <div class="dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/jBJWaqoSCiARWtfV0GlqHrcdidd.jpg" alt="The Witcher">
+                        <img src="https://www.themoviedb.org/t/p/w220_and_h330_face/5qMupAz4A9EN5Rutrkmov45mNXZ.jpg" alt="Cobra Kai">
                         <div class="dsmovie-card-description">
-                            <h3>The Witcher</h3>
+                            <h3>Cobra Kai</h3>
                             <a class="dsmovie-btn" href="form.html">Avaliar</a>
                         </div>
                     </div>
@@ -99,9 +99,9 @@
 
                 <div class="col-sm-6 col-lg-4 col-xl-3 bm-3">
                     <div class="dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/jBJWaqoSCiARWtfV0GlqHrcdidd.jpg" alt="The Witcher">
+                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/8aCek7W6BovH7M4enWjqrGptvQ8.jpg" alt="Rick and Morty">
                         <div class="dsmovie-card-description">
-                            <h3>The Witcher</h3>
+                            <h3>Rick and Morty</h3>
                             <a class="dsmovie-btn" href="form.html">Avaliar</a>
                         </div>
                     </div>
@@ -109,9 +109,9 @@
 
                 <div class="col-sm-6 col-lg-4 col-xl-3 bm-3">
                     <div class="dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/jBJWaqoSCiARWtfV0GlqHrcdidd.jpg" alt="The Witcher">
+                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/tsRy63Mu5cu8etL1X7ZLyf7UP1M.jpg" alt="Breaking Bad">
                         <div class="dsmovie-card-description">
-                            <h3>The Witcher</h3>
+                            <h3>Breaking Bad</h3>
                             <a class="dsmovie-btn" href="form.html">Avaliar</a>
                         </div>
                     </div>
@@ -119,9 +119,9 @@
 
                 <div class="col-sm-6 col-lg-4 col-xl-3 bm-3">
                     <div class="dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/jBJWaqoSCiARWtfV0GlqHrcdidd.jpg" alt="The Witcher">
+                        <img src="https://www.themoviedb.org/t/p/w220_and_h330_face/pB9L0jAnEQLMKgexqCEocEW8TA.jpg" alt="Bojack Horseman">
                         <div class="dsmovie-card-description">
-                            <h3>The Witcher</h3>
+                            <h3>Bojack Horseman</h3>
                             <a class="dsmovie-btn" href="form.html">Avaliar</a>
                         </div>
                     </div>
@@ -129,9 +129,9 @@
 
                 <div class="col-sm-6 col-lg-4 col-xl-3 bm-3">
                     <div class="dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/jBJWaqoSCiARWtfV0GlqHrcdidd.jpg" alt="The Witcher">
+                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/hiK4qc0tZijQ9KNUnBIS1k4tdMJ.jpg" alt="DR. House">
                         <div class="dsmovie-card-description">
-                            <h3>The Witcher</h3>
+                            <h3>DR. House</h3>
                             <a class="dsmovie-btn" href="form.html">Avaliar</a>
                         </div>
                     </div>
@@ -139,9 +139,9 @@
 
                 <div class="col-sm-6 col-lg-4 col-xl-3 bm-3">
                     <div class="dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/jBJWaqoSCiARWtfV0GlqHrcdidd.jpg" alt="The Witcher">
+                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/8DLpbLeUylcUnE4nTlRC4b6jzNz.jpg" alt="Jujutsu Kaisen">
                         <div class="dsmovie-card-description">
-                            <h3>The Witcher</h3>
+                            <h3>Jujutsu Kaisen</h3>
                             <a class="dsmovie-btn" href="form.html">Avaliar</a>
                         </div>
                     </div>
