--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DSMovie</title>
-    
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="CSS/styles.css"
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-</head>
+    <link rel="stylesheet" href="CSS/styles.css" </head>
 
 <body>
     <header>
@@ -29,7 +29,8 @@
 
                 <div class="col-sm-6 col-lg-4 col-xl-3 bm-3">
                     <div class="dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/jBJWaqoSCiARWtfV0GlqHrcdidd.jpg" alt="The Witcher">
+                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/jBJWaqoSCiARWtfV0GlqHrcdidd.jpg"
+                            alt="The Witcher">
                         <div class="dsmovie-card-description">
                             <h3>The Witcher</h3>
                             <a class="dsmovie-btn" href="form.html">Avaliar</a>
@@ -39,9 +40,10 @@
 
                 <div class="col-sm-6 col-lg-4 col-xl-3 bm-3">
                     <div class="dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/k47JEUTQsSMN532HRg6RCzZKBdB.jpg" alt="Vikings: Valhalla">
+                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/k66wW641A5Tok6OHMAsCbxM0UpG.jpg"
+                            alt="Sherlock">
                         <div class="dsmovie-card-description">
-                            <h3>Vikings Valhalla</h3>
+                            <h3>Sherlock</h3>
                             <a class="dsmovie-btn" href="form.html">Avaliar</a>
                         </div>
                     </div>
@@ -49,7 +51,8 @@
 
                 <div class="col-sm-6 col-lg-4 col-xl-3 bm-3">
                     <div class="dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/w220_and_h330_face/i0uajcHH9yogXMfDHpOXexIukG9.jpg" alt="Peaky Blinders">
+                        <img src="https://www.themoviedb.org/t/p/w220_and_h330_face/i0uajcHH9yogXMfDHpOXexIukG9.jpg"
+                            alt="Peaky Blinders">
                         <div class="dsmovie-card-description">
                             <h3>Peaky Blinders</h3>
                             <a class="dsmovie-btn" href="form.html">Avaliar</a>
@@ -59,7 +62,8 @@
 
                 <div class="col-sm-6 col-lg-4 col-xl-3 bm-3">
                     <div class="dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/sjx6zjQI2dLGtEL0HGWsnq6UyLU.jpg" alt="O Livro de Boba Fett">
+                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/sjx6zjQI2dLGtEL0HGWsnq6UyLU.jpg"
+                            alt="O Livro de Boba Fett">
                         <div class="dsmovie-card-description">
                             <h3>O Livro de Boba Fett</h3>
                             <a class="dsmovie-btn" href="form.html">Avaliar</a>
@@ -69,7 +73,8 @@
 
                 <div class="col-sm-6 col-lg-4 col-xl-3 bm-3">
                     <div class="dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/zHdQ6yaqDf3OQO5uhr0auAgwK6O.jpg" alt="Bel Air">
+                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/zHdQ6yaqDf3OQO5uhr0auAgwK6O.jpg"
+                            alt="Bel Air">
                         <div class="dsmovie-card-description">
                             <h3>Bel Air</h3>
                             <a class="dsmovie-btn" href="form.html">Avaliar</a>
@@ -79,7 +84,8 @@
 
                 <div class="col-sm-6 col-lg-4 col-xl-3 bm-3">
                     <div class="dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/lHe8iwM4Cdm6RSEiara4PN8ZcBd.jpg" alt="Vikings">
+                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/lHe8iwM4Cdm6RSEiara4PN8ZcBd.jpg"
+                            alt="Vikings">
                         <div class="dsmovie-card-description">
                             <h3>Vikings</h3>
                             <a class="dsmovie-btn" href="form.html">Avaliar</a>
@@ -89,7 +95,8 @@
 
                 <div class="col-sm-6 col-lg-4 col-xl-3 bm-3">
                     <div class="dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/w220_and_h330_face/5qMupAz4A9EN5Rutrkmov45mNXZ.jpg" alt="Cobra Kai">
+                        <img src="https://www.themoviedb.org/t/p/w220_and_h330_face/5qMupAz4A9EN5Rutrkmov45mNXZ.jpg"
+                            alt="Cobra Kai">
                         <div class="dsmovie-card-description">
                             <h3>Cobra Kai</h3>
                             <a class="dsmovie-btn" href="form.html">Avaliar</a>
@@ -99,7 +106,8 @@
 
                 <div class="col-sm-6 col-lg-4 col-xl-3 bm-3">
                     <div class="dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/8aCek7W6BovH7M4enWjqrGptvQ8.jpg" alt="Rick and Morty">
+                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/8aCek7W6BovH7M4enWjqrGptvQ8.jpg"
+                            alt="Rick and Morty">
                         <div class="dsmovie-card-description">
                             <h3>Rick and Morty</h3>
                             <a class="dsmovie-btn" href="form.html">Avaliar</a>
@@ -109,7 +117,8 @@
 
                 <div class="col-sm-6 col-lg-4 col-xl-3 bm-3">
                     <div class="dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/tsRy63Mu5cu8etL1X7ZLyf7UP1M.jpg" alt="Breaking Bad">
+                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/tsRy63Mu5cu8etL1X7ZLyf7UP1M.jpg"
+                            alt="Breaking Bad">
                         <div class="dsmovie-card-description">
                             <h3>Breaking Bad</h3>
                             <a class="dsmovie-btn" href="form.html">Avaliar</a>
@@ -119,7 +128,8 @@
 
                 <div class="col-sm-6 col-lg-4 col-xl-3 bm-3">
                     <div class="dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/w220_and_h330_face/pB9L0jAnEQLMKgexqCEocEW8TA.jpg" alt="Bojack Horseman">
+                        <img src="https://www.themoviedb.org/t/p/w220_and_h330_face/pB9L0jAnEQLMKgexqCEocEW8TA.jpg"
+                            alt="Bojack Horseman">
                         <div class="dsmovie-card-description">
                             <h3>Bojack Horseman</h3>
                             <a class="dsmovie-btn" href="form.html">Avaliar</a>
@@ -129,7 +139,8 @@
 
                 <div class="col-sm-6 col-lg-4 col-xl-3 bm-3">
                     <div class="dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/hiK4qc0tZijQ9KNUnBIS1k4tdMJ.jpg" alt="DR. House">
+                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/hiK4qc0tZijQ9KNUnBIS1k4tdMJ.jpg"
+                            alt="DR. House">
                         <div class="dsmovie-card-description">
                             <h3>DR. House</h3>
                             <a class="dsmovie-btn" href="form.html">Avaliar</a>
@@ -139,7 +150,8 @@
 
                 <div class="col-sm-6 col-lg-4 col-xl-3 bm-3">
                     <div class="dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/8DLpbLeUylcUnE4nTlRC4b6jzNz.jpg" alt="Jujutsu Kaisen">
+                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/8DLpbLeUylcUnE4nTlRC4b6jzNz.jpg"
+                            alt="Jujutsu Kaisen">
                         <div class="dsmovie-card-description">
                             <h3>Jujutsu Kaisen</h3>
                             <a class="dsmovie-btn" href="form.html">Avaliar</a>
@@ -151,4 +163,5 @@
         </section>
     </main>
 </body>
+
 </html>
