--- a/form.html
+++ b/form.html
@@ -6,10 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DSMovie</title>
-
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
     <link rel="stylesheet" href="CSS/styles.css" </head>
 
 <body>
@@ -22,22 +20,38 @@
             </div>
         </nav>
     </header>
-
     <main>
         <section id="dsmovie-cform-section">
             <div class="container dsmovie-form-container">
-
                 <div>
                     <div class="dsmovie-card">
                         <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/jBJWaqoSCiARWtfV0GlqHrcdidd.jpg"
                             alt="The Witcher">
-                        <div class="dsmovie-card-description">
+                        <div class="dsmovie-form-description">
                             <h3>The Witcher</h3>
-                            <a class="dsmovie-btn" href="index.html">Cancelar</a>
+                            <form class="dsmovie-form">
+                                <div class="form-group dsmovie-form-group">
+                                    <label for="email">Informe seu email</label>
+                                    <input class="form-control" type="email" id="email">
+                                </div>
+                                <div class="form-group dsmovie-form-group">
+                                    <label for="score">Informe sua avaliação</label>
+                                    <select class="form-control" name="score" id="score">
+                                        <option value="1">1</option>
+                                        <option value="2">2</option>
+                                        <option value="3">3</option>
+                                        <option value="4">4</option>
+                                        <option value="5">5</option>
+                                    </select>
+                                </div>
+                                <div class="dsmovie-form-btn-container">
+                                    <button class="dsmovie-btn" type="submit">Salvar</button>
+                                    <a class="dsmovie-btn" href="index.html">Cancelar</a>
+                                </div>
+                            </form>
                         </div>
                     </div>
                 </div>
-
             </div>
         </section>
     </main>
