Componente de Paginacao

--- a/index.html
+++ b/index.html
@@ -25,6 +25,21 @@
 
     <main>
         <section id="dsmovie-card-list" class="container">
+
+            <div class="dsmovie-pagination-container">
+                <div class="dsmovie-pagination-box">
+                    <button disabled>
+                        <img src="img/arrow.svg" alt="Voltar">
+                    </button>
+                    <p>1 de 23</p>
+                    <button>
+                        <img class="dsmovie-flip-horizontal" src="img/arrow.svg" alt="Voltar">
+                    </button>
+
+                </div>
+
+            </div>
+
             <div class="row">
 
                 <div class="col-sm-6 col-lg-4 col-xl-3 bm-3">
@@ -33,7 +48,18 @@
                             alt="The Witcher">
                         <div class="dsmovie-card-description">
                             <h3>The Witcher</h3>
-                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            <div class="dsmovie-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="img/star-full.svg" alt="star">
+                                    <img src="img/star-full.svg" alt="star">
+                                    <img src="img/star-full.svg" alt="star">
+                                    <img src="img/star-half.svg" alt="star">
+                                    <img src="img/star-empty.svg" alt="star">
+                                </div>
+                                <p>10 avaliações</p>
+                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
                         </div>
                     </div>
                 </div>
