--- a/index.html
+++ b/index.html
@@ -70,7 +70,18 @@
                             alt="Sherlock">
                         <div class="dsmovie-card-description">
                             <h3>Sherlock</h3>
-                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            <div class="dsmovie-card-description-bottom">
+                                <h4>5.0</h4>
+                                <div>
+                                    <img src="img/star-full.svg" alt="star">
+                                    <img src="img/star-full.svg" alt="star">
+                                    <img src="img/star-full.svg" alt="star">
+                                    <img src="img/star-full.svg" alt="star">
+                                    <img src="img/star-full.svg" alt="star">
+                                </div>
+                                <p>32 avaliações</p>
+                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -81,7 +92,18 @@
                             alt="Peaky Blinders">
                         <div class="dsmovie-card-description">
                             <h3>Peaky Blinders</h3>
-                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            <div class="dsmovie-card-description-bottom">
+                                <h4>4.1</h4>
+                                <div>
+                                    <img src="img/star-full.svg" alt="star">
+                                    <img src="img/star-full.svg" alt="star">
+                                    <img src="img/star-full.svg" alt="star">
+                                    <img src="img/star-full.svg" alt="star">
+                                    <img src="img/star-empty.svg" alt="star">
+                                </div>
+                                <p>17 avaliações</p>
+                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -92,7 +114,18 @@
                             alt="O Livro de Boba Fett">
                         <div class="dsmovie-card-description">
                             <h3>O Livro de Boba Fett</h3>
-                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            <div class="dsmovie-card-description-bottom">
+                                <h4>3.0</h4>
+                                <div>
+                                    <img src="img/star-full.svg" alt="star">
+                                    <img src="img/star-full.svg" alt="star">
+                                    <img src="img/star-full.svg" alt="star">
+                                    <img src="img/star-empty.svg" alt="star">
+                                    <img src="img/star-empty.svg" alt="star">
+                                </div>
+                                <p>6 avaliações</p>
+                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -103,7 +136,18 @@
                             alt="Bel Air">
                         <div class="dsmovie-card-description">
                             <h3>Bel Air</h3>
-                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            <div class="dsmovie-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="img/star-full.svg" alt="star">
+                                    <img src="img/star-full.svg" alt="star">
+                                    <img src="img/star-full.svg" alt="star">
+                                    <img src="img/star-half.svg" alt="star">
+                                    <img src="img/star-empty.svg" alt="star">
+                                </div>
+                                <p>10 avaliações</p>
+                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -114,7 +158,18 @@
                             alt="Vikings">
                         <div class="dsmovie-card-description">
                             <h3>Vikings</h3>
-                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            <div class="dsmovie-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="img/star-full.svg" alt="star">
+                                    <img src="img/star-full.svg" alt="star">
+                                    <img src="img/star-full.svg" alt="star">
+                                    <img src="img/star-half.svg" alt="star">
+                                    <img src="img/star-empty.svg" alt="star">
+                                </div>
+                                <p>10 avaliações</p>
+                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -125,7 +180,18 @@
                             alt="Cobra Kai">
                         <div class="dsmovie-card-description">
                             <h3>Cobra Kai</h3>
-                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            <div class="dsmovie-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="img/star-full.svg" alt="star">
+                                    <img src="img/star-full.svg" alt="star">
+                                    <img src="img/star-full.svg" alt="star">
+                                    <img src="img/star-half.svg" alt="star">
+                                    <img src="img/star-empty.svg" alt="star">
+                                </div>
+                                <p>10 avaliações</p>
+                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -136,7 +202,18 @@
                             alt="Rick and Morty">
                         <div class="dsmovie-card-description">
                             <h3>Rick and Morty</h3>
-                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            <div class="dsmovie-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="img/star-full.svg" alt="star">
+                                    <img src="img/star-full.svg" alt="star">
+                                    <img src="img/star-full.svg" alt="star">
+                                    <img src="img/star-half.svg" alt="star">
+                                    <img src="img/star-empty.svg" alt="star">
+                                </div>
+                                <p>10 avaliações</p>
+                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -147,7 +224,18 @@
                             alt="Breaking Bad">
                         <div class="dsmovie-card-description">
                             <h3>Breaking Bad</h3>
-                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            <div class="dsmovie-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="img/star-full.svg" alt="star">
+                                    <img src="img/star-full.svg" alt="star">
+                                    <img src="img/star-full.svg" alt="star">
+                                    <img src="img/star-half.svg" alt="star">
+                                    <img src="img/star-empty.svg" alt="star">
+                                </div>
+                                <p>10 avaliações</p>
+                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -158,7 +246,18 @@
                             alt="Bojack Horseman">
                         <div class="dsmovie-card-description">
                             <h3>Bojack Horseman</h3>
-                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            <div class="dsmovie-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="img/star-full.svg" alt="star">
+                                    <img src="img/star-full.svg" alt="star">
+                                    <img src="img/star-full.svg" alt="star">
+                                    <img src="img/star-half.svg" alt="star">
+                                    <img src="img/star-empty.svg" alt="star">
+                                </div>
+                                <p>10 avaliações</p>
+                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -169,7 +268,18 @@
                             alt="DR. House">
                         <div class="dsmovie-card-description">
                             <h3>DR. House</h3>
-                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            <div class="dsmovie-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="img/star-full.svg" alt="star">
+                                    <img src="img/star-full.svg" alt="star">
+                                    <img src="img/star-full.svg" alt="star">
+                                    <img src="img/star-half.svg" alt="star">
+                                    <img src="img/star-empty.svg" alt="star">
+                                </div>
+                                <p>10 avaliações</p>
+                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -180,7 +290,18 @@
                             alt="Jujutsu Kaisen">
                         <div class="dsmovie-card-description">
                             <h3>Jujutsu Kaisen</h3>
-                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            <div class="dsmovie-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="img/star-full.svg" alt="star">
+                                    <img src="img/star-full.svg" alt="star">
+                                    <img src="img/star-full.svg" alt="star">
+                                    <img src="img/star-half.svg" alt="star">
+                                    <img src="img/star-empty.svg" alt="star">
+                                </div>
+                                <p>10 avaliações</p>
+                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
                         </div>
                     </div>
                 </div>
